correción de etiqeuta

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          <li>Etiqueta table</li>
          <li>Etiqueta video</li>
          <li>Etiqueta audio</li>
-         <li>Etiqeuta div</li>
+         <li>Etiqueta div</li>
         </ul>
        </li>
        <li><span class="fw-bold">Rutas relativas</span></li>
