--- a/index.html
+++ b/index.html
@@ -16,23 +16,163 @@
    rel="stylesheet"
    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
   />
+  <!-- Fontawesome -->
+  <link
+   rel="stylesheet"
+   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+   integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+   crossorigin="anonymous"
+   referrerpolicy="no-referrer"
+  />
   <title>Temario de clases</title>
   <link rel="stylesheet" href="style.css" />
+  <link id="pageIcon" rel="shortcut icon" href="media/images/pageIcon.svg" />
  </head>
 
- <body>
+ <body
+  style="height: 5000px"
+  data-bs-spy="scroll"
+  data-bs-target="#navbarSticky"
+  offset="10"
+  id="home"
+ >
   <div class="background container-fluid"></div>
   <div class="container bg-white mt-4">
+   <!-- title -->
    <div class="container">
     <div class="row">
-     <h1 class="text-center py-2">
+     <h1 class="text-center pt-2 mb-0">
       Temario de clases <i class="bi bi-code-square ps-2"></i>
      </h1>
-     <hr />
     </div>
    </div>
-   <div class="container pt-4">
-    <!-- 17/5/21 -->
+   <!-- sticky nav -->
+
+   <div class="container sticky-top bg-white">
+    <hr />
+    <nav id="navbarSticky">
+     <ul class="nav nav-pills justify-content-center">
+      <div class="container-fluid">
+       <div class="row">
+        <li class="navitem col-md-3">
+         <a class="nav-link text-center" href="#home">Home</a>
+        </li>
+        <li class="navitem col-md-3">
+         <a class="nav-link text-center" href="#ruta">Ruta</a>
+        </li>
+        <li class="navitem col-md-3">
+         <a class="nav-link text-center" href="#tarea">Tarea</a>
+        </li>
+        <li class="navitem col-md-3">
+         <a class="nav-link text-center" href="#historial">Historial</a>
+        </li>
+       </div>
+      </div>
+     </ul>
+    </nav>
+    <hr />
+   </div>
+
+   <!-- learning path -->
+   <div class="container pt-4" id="ruta">
+    <h4>Ruta de aprendizaje</h4>
+    <div class="accordion" id="accordionExample">
+     <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOne">
+       <button
+        class="accordion-button collapsed"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseOne"
+        aria-expanded="false"
+        aria-controls="collapseOne"
+       >
+        HTML
+       </button>
+      </h2>
+      <div
+       id="collapseOne"
+       class="accordion-collapse collapse"
+       aria-labelledby="headingOne"
+       data-bs-parent="#accordionExample"
+      >
+       <div class="accordion-body">
+        <strong>This is the first item's accordion body.</strong> It is shown by
+        default, until the collapse plugin adds the appropriate classes that we
+        use to style each element. These classes control the overall appearance,
+        as well as the showing and hiding via CSS transitions. You can modify
+        any of this with custom CSS or overriding our default variables. It's
+        also worth noting that just about any HTML can go within the
+        <code>.accordion-body</code>, though the transition does limit overflow.
+       </div>
+      </div>
+     </div>
+     <div class="accordion-item">
+      <h2 class="accordion-header" id="headingTwo">
+       <button
+        class="accordion-button collapsed"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseTwo"
+        aria-expanded="false"
+        aria-controls="collapseTwo"
+       >
+        CSS
+       </button>
+      </h2>
+      <div
+       id="collapseTwo"
+       class="accordion-collapse collapse"
+       aria-labelledby="headingTwo"
+       data-bs-parent="#accordionExample"
+      >
+       <div class="accordion-body">
+        <strong>This is the second item's accordion body.</strong> It is hidden
+        by default, until the collapse plugin adds the appropriate classes that
+        we use to style each element. These classes control the overall
+        appearance, as well as the showing and hiding via CSS transitions. You
+        can modify any of this with custom CSS or overriding our default
+        variables. It's also worth noting that just about any HTML can go within
+        the <code>.accordion-body</code>, though the transition does limit
+        overflow.
+       </div>
+      </div>
+     </div>
+     <div class="accordion-item">
+      <h2 class="accordion-header" id="headingThree">
+       <button
+        class="accordion-button collapsed"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseThree"
+        aria-expanded="false"
+        aria-controls="collapseThree"
+       >
+        JS
+       </button>
+      </h2>
+      <div
+       id="collapseThree"
+       class="accordion-collapse collapse"
+       aria-labelledby="headingThree"
+       data-bs-parent="#accordionExample"
+      >
+       <div class="accordion-body">
+        <strong>This is the third item's accordion body.</strong> It is hidden
+        by default, until the collapse plugin adds the appropriate classes that
+        we use to style each element. These classes control the overall
+        appearance, as well as the showing and hiding via CSS transitions. You
+        can modify any of this with custom CSS or overriding our default
+        variables. It's also worth noting that just about any HTML can go within
+        the <code>.accordion-body</code>, though the transition does limit
+        overflow.
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+   <!-- 17/5/21 -->
+   <div class="container pt-4" id="tarea">
     <h5>17 de mayo del 2021</h5>
     <h4>Tarea:</h4>
     <ul>
@@ -58,6 +198,7 @@
        <li><span class="fw-bold">Rutas relativas</span></li>
       </ul>
      </li>
+     <li><span class="fw-bold">Crear cuenta de Github</span></li>
     </ul>
     <h4>Pendientes:</h4>
     <ul>
@@ -65,18 +206,20 @@
     </ul>
     <!-- 17/5/21 -->
    </div>
-			<!-- footer -->
+   <!-- footer -->
    <hr />
    <p class="fs-4 pb-4">
     Este temario está en:
     <a
      href="https://github.com/AxelRSa/manuelTemary"
      target="_blank"
-     class="btn btn-primary"
+     class="btn btn-primary mx-2"
      ><i class="bi bi-github fs-4"></i
     ></a>
+    y está hecho con: <i class="fab fa-sass"></i><i class="fab fa-bootstrap"></i
+    ><i class="fab fa-html5"></i><i class="fab fa-js"></i>
    </p>
-			<!-- footer -->
+   <!-- footer -->
   </div>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
