height and responsive version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
     <link id="pageIcon" rel="shortcut icon" href="media/images/pageIcon.svg">
   </head>
-  <body id="home" style="height: 5000px" data-bs-spy="scroll" data-bs-target="#navbarSticky" offset="10">
+  <body id="home" data-bs-spy="scroll" data-bs-target="#navbarSticky" offset="10">
     <div class="background container-fluid"></div>
     <div class="container bg-white mt-4">
       <!-- title-->
@@ -30,10 +30,10 @@
           <ul class="nav nav-pills justify-content-center">
             <div class="container-fluid">
               <div class="row">
-                <li class="navitem col-md-3"><a class="nav-link text-center" href="#home">Home</a></li>
-                <li class="navitem col-md-3"><a class="nav-link text-center" href="#ruta">Ruta</a></li>
-                <li class="navitem col-md-3"><a class="nav-link text-center" href="#tarea">Tarea</a></li>
-                <li class="navitem col-md-3"><a class="nav-link text-center" href="#historial">Historial</a></li>
+                <li class="navitem col-6 col-md-3"><a class="nav-link text-center" href="#home">Home</a></li>
+                <li class="navitem col-6 col-md-3"><a class="nav-link text-center" href="#ruta">Ruta</a></li>
+                <li class="navitem col-6 col-md-3"><a class="nav-link text-center" href="#tarea">Tarea</a></li>
+                <li class="navitem col-6 col-md-3"><a class="nav-link text-center" href="#historial">Historial</a></li>
               </div>
             </div>
           </ul>
