--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <!-- Bootstrap ICONS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <!-- Fontawesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Temario de clases</title>
     <link rel="stylesheet" href="style.css">
@@ -17,30 +12,27 @@
   <body id="home" data-bs-spy="scroll" data-bs-target="#navbarSticky" offset="10">
     <div class="background container-fluid"></div>
     <div class="container bg-white mt-4">
-      <!-- title-->
       <div class="container">
         <div class="row">
-          <h1 class="text-center pt-2 mb-0">Temario de clases <i class="bi bi-code-square ps-2"></i></h1>
+          <h1 class="text-center pt-2 mb-0">Temario de clases <i class="fas fa-laptop-code ps-2"></i></h1>
         </div>
       </div>
-      <!-- sticky nav-->
       <div class="container sticky-top bg-white">
         <hr>
         <nav id="navbarSticky">
           <ul class="nav nav-pills justify-content-center">
             <div class="container-fluid">
               <div class="row">
-                <li class="navitem col-6 col-md-3"><a class="nav-link text-center" href="#home">Home</a></li>
-                <li class="navitem col-6 col-md-3"><a class="nav-link text-center" href="#ruta">Ruta</a></li>
-                <li class="navitem col-6 col-md-3"><a class="nav-link text-center" href="#tarea">Tarea</a></li>
-                <li class="navitem col-6 col-md-3"><a class="nav-link text-center" href="#historial">Historial</a></li>
+                <li class="navitem col-6 col-md-3"><a class="nav-link text-center px-0" href="#home"><i class="fas fa-home me-3"></i>Home</a></li>
+                <li class="navitem col-6 col-md-3"><a class="nav-link text-center px-0" href="#ruta"><i class="fas fa-route me-3"></i>Ruta</a></li>
+                <li class="navitem col-6 col-md-3"><a class="nav-link text-center px-0" href="#tarea"><i class="fas fa-laptop-house me-3"></i>Tarea</a></li>
+                <li class="navitem col-6 col-md-3"><a class="nav-link text-center px-0" href="#historial"><i class="far fa-clipboard me-3"></i>Historial</a></li>
               </div>
             </div>
           </ul>
         </nav>
         <hr>
       </div>
-      <!-- learning path-->
       <div class="container pt-4" id="ruta">
         <h4>Ruta de aprendizaje</h4>
         <div class="accordion" id="accordionExample">
@@ -92,7 +84,6 @@
           </div>
         </div>
       </div>
-      <!-- 17/5/21-->
       <div class="container pt-4" id="tarea">
         <h5>17 de mayo del 2021</h5>
         <h4>Tarea:</h4>
@@ -119,13 +110,12 @@
           <li>Cómo instalar preprocesadores</li>
         </ul>
         <!-- 17/5/21-->
-        <!-- footer-->
-        <hr>
-        <p class="fs-4 pb-4">Este temario está en:<a class="btn btn-primary mx-2" href="https://github.com/AxelRSa/manuelTemary" target="_blank"><i class="bi bi-github fs-4"></i></a>    y está hecho con: <img class="mx-2" src="media/images/pug.svg" width="25"><i class="fab fa-sass mx-2"></i><i class="fab fa-bootstrap mx-2"></i><i class="fab fa-js mx-2"></i></p>
-        <!-- footer-->
+      </div>
+      <hr>
+      <p class="fs-4 pb-4">Este temario está en:<a class="btn btn-primary mx-2" href="https://github.com/AxelRSa/manuelTemary" target="_blank"><i class="fab fa-github fs-4"></i></a>    y está hecho con: <img class="mx-2" src="media/images/pug.svg" width="25"><i class="fab fa-sass mx-2"></i><i class="fab fa-bootstrap mx-2"></i><i class="fab fa-js mx-2"></i>
         <!-- Option 1: Bootstrap Bundle with Popper-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-      </div>
+      </p>
     </div>
   </body>
 </html>
