--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
     <link rel="stylesheet" href="style.css">
     <link id="pageIcon" rel="shortcut icon" href="media/images/pageIcon.svg">
   </head>
-  <body id="home" data-bs-spy="scroll" data-bs-target="#navbarSticky" offset="10">
+  <body id="home" data-bs-spy="scroll" data-bs-target="#navbarSticky">
     <div class="background container-fluid"></div>
-    <div class="container bg-white mt-4">
+    <div class="container bg-white mt-5">
       <div class="container">
         <div class="row">
           <h1 class="text-center pt-2 mb-0">Temario de clases <i class="fas fa-laptop-code ps-2"></i></h1>
         </div>
       </div>
-      <div class="container sticky-top bg-white">
+      <div class="container sticky-top bg-white" id="navbar">
         <hr>
         <nav id="navbarSticky">
           <ul class="nav nav-pills justify-content-center">
             <div class="container-fluid">
               <div class="row">
-                <li class="navitem col-6 col-md-3"><a class="nav-link text-center px-0" href="#home"><i class="fas fa-home me-3"></i>Home</a></li>
-                <li class="navitem col-6 col-md-3"><a class="nav-link text-center px-0" href="#ruta"><i class="fas fa-route me-3"></i>Ruta</a></li>
-                <li class="navitem col-6 col-md-3"><a class="nav-link text-center px-0" href="#tarea"><i class="fas fa-laptop-house me-3"></i>Tarea</a></li>
-                <li class="navitem col-6 col-md-3"><a class="nav-link text-center px-0" href="#historial"><i class="far fa-clipboard me-3"></i>Historial</a></li>
+                <li class="navitem col-6 col-md-3"><a class="navbarSticky__a nav-link text-center px-0" href="#home"><i class="fas fa-home me-3"></i>Home</a></li>
+                <li class="navitem col-6 col-md-3"><a class="navbarSticky__a nav-link text-center px-0" href="#ruta"><i class="fas fa-route me-3"></i>Ruta</a></li>
+                <li class="navitem col-6 col-md-3"><a class="navbarSticky__a nav-link text-center px-0" href="#tarea"><i class="fas fa-laptop-house me-3"></i>Tarea</a></li>
+                <li class="navitem col-6 col-md-3"><a class="navbarSticky__a nav-link text-center px-0" href="#historial"><i class="far fa-clipboard me-3"></i>Historial</a></li>
               </div>
             </div>
           </ul>
@@ -82,9 +82,42 @@
               </div>
             </div>
           </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">SCSS</button>
+            </h2>
+            <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body"><strong>This is the third item's accordion body.</strong> It is hidden
+                        by default, until the collapse plugin adds the appropriate classes that
+                        we use to style each element. These classes control the overall
+                        appearance, as well as the showing and hiding via CSS transitions. You
+                        can modify any of this with custom CSS or overriding our default
+                        variables. It's also worth noting that just about any HTML can go within
+                        the <code>.accordion-body</code>, though the transition does limit
+                        overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">PUG</button>
+            </h2>
+            <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body"><strong>This is the third item's accordion body.</strong> It is hidden
+                        by default, until the collapse plugin adds the appropriate classes that
+                        we use to style each element. These classes control the overall
+                        appearance, as well as the showing and hiding via CSS transitions. You
+                        can modify any of this with custom CSS or overriding our default
+                        variables. It's also worth noting that just about any HTML can go within
+                        the <code>.accordion-body</code>, though the transition does limit
+                        overflow.
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="container pt-4" id="tarea">
+        <h4>Tarea</h4>
         <h5>17 de mayo del 2021</h5>
         <h4>Tarea:</h4>
         <ul>
@@ -112,10 +145,12 @@
         <!-- 17/5/21-->
       </div>
       <hr>
-      <p class="fs-4 pb-4">Este temario está en:<a class="btn btn-primary mx-2" href="https://github.com/AxelRSa/manuelTemary" target="_blank"><i class="fab fa-github fs-4"></i></a>    y está hecho con: <img class="mx-2" src="media/images/pug.svg" width="25"><i class="fab fa-sass mx-2"></i><i class="fab fa-bootstrap mx-2"></i><i class="fab fa-js mx-2"></i>
-        <!-- Option 1: Bootstrap Bundle with Popper-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-      </p>
+      <div id="historial">
+        <h4>Historial</h4>
+      </div>
+      <p class="fs-4 pb-4">Este temario está en:<a class="btn btn-primary mx-2" href="https://github.com/AxelRSa/manuelTemary" target="_blank"><i class="fab fa-github fs-4"></i></a>    y está hecho con: <img class="mx-2" src="media/images/pug.svg" width="25"><i class="fab fa-sass mx-2"></i><i class="fab fa-bootstrap mx-2"></i><i class="fab fa-js mx-2"></i></p>
     </div>
+    <script src="script.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
 </html>
