--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">HTML</button>
             </h2>
             <div class="accordion-collapse collapse" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-              <div class="accordion-body"><strong>This is the first item's accordion body.</strong> It is shown by
-                        default, until the collapse plugin adds the appropriate classes that we
-                        use to style each element. These classes control the overall appearance,
-                        as well as the showing and hiding via CSS transitions. You can modify
-                        any of this with custom CSS or overriding our default variables. It's
-                        also worth noting that just about any HTML can go within the<code>.accordion-body</code>, though the transition does limit overflow.
+              <div class="accordion-body">
+                <ul>
+                  <li><strong>Formularios </strong></li>
+                  <li>Videos </li>
+                  <li>Tables </li>
+                  <li><strong>Divs </strong></li>
+                  <li>Audios</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -55,14 +57,25 @@
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">CSS</button>
             </h2>
             <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-              <div class="accordion-body"><strong>This is the second item's accordion body.</strong> It is hidden
-                        by default, until the collapse plugin adds the appropriate classes that
-                        we use to style each element. These classes control the overall
-                        appearance, as well as the showing and hiding via CSS transitions. You
-                        can modify any of this with custom CSS or overriding our default
-                        variables. It's also worth noting that just about any HTML can go within
-                        the <code>.accordion-body</code>, though the transition does limit
-                        overflow.
+              <div class="accordion-body">
+                <ul> 
+                  <li>Unidades </li>
+                  <li>Fuentes externas </li>
+                  <li>Z-index </li>
+                  <li>Overflow</li>
+                  <li><strong>Position </strong></li>
+                  <li><strong>Pseudo elementos</strong></li>
+                  <li>Colores</li>
+                  <li><strong>Display</strong></li>
+                  <li>Float</li>
+                  <li><strong>Flexbox</strong></li>
+                  <li><strong>Grid</strong></li>
+                  <li>Animation</li>
+                  <li>Transition</li>
+                  <li>Background</li>
+                  <li>Filtros</li>
+                  <li>Outline</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -71,47 +84,23 @@
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">JS</button>
             </h2>
             <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-              <div class="accordion-body"><strong>This is the third item's accordion body.</strong> It is hidden
-                        by default, until the collapse plugin adds the appropriate classes that
-                        we use to style each element. These classes control the overall
-                        appearance, as well as the showing and hiding via CSS transitions. You
-                        can modify any of this with custom CSS or overriding our default
-                        variables. It's also worth noting that just about any HTML can go within
-                        the <code>.accordion-body</code>, though the transition does limit
-                        overflow.
-              </div>
+              <div class="accordion-body"></div>
             </div>
           </div>
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">SCSS</button>
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">SCSS</button>
             </h2>
-            <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-              <div class="accordion-body"><strong>This is the third item's accordion body.</strong> It is hidden
-                        by default, until the collapse plugin adds the appropriate classes that
-                        we use to style each element. These classes control the overall
-                        appearance, as well as the showing and hiding via CSS transitions. You
-                        can modify any of this with custom CSS or overriding our default
-                        variables. It's also worth noting that just about any HTML can go within
-                        the <code>.accordion-body</code>, though the transition does limit
-                        overflow.
-              </div>
+            <div class="accordion-collapse collapse" id="collapseFour" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+              <div class="accordion-body"></div>
             </div>
           </div>
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">PUG</button>
+            <h2 class="accordion-header" id="headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">PUG</button>
             </h2>
-            <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-              <div class="accordion-body"><strong>This is the third item's accordion body.</strong> It is hidden
-                        by default, until the collapse plugin adds the appropriate classes that
-                        we use to style each element. These classes control the overall
-                        appearance, as well as the showing and hiding via CSS transitions. You
-                        can modify any of this with custom CSS or overriding our default
-                        variables. It's also worth noting that just about any HTML can go within
-                        the <code>.accordion-body</code>, though the transition does limit
-                        overflow.
-              </div>
+            <div class="accordion-collapse collapse" id="collapseFive" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+              <div class="accordion-body"></div>
             </div>
           </div>
         </div>
