--- a/index.html
+++ b/index.html
@@ -34,109 +34,105 @@
         <hr>
       </div>
       <div class="container pt-4" id="ruta">
-        <h4>Ruta de aprendizaje</h4>
+        <hr>
+        <h4 class="h2 text-center">Ruta de aprendizaje</h4>
         <div class="accordion" id="accordionExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">HTML</button>
-            </h2>
-            <div class="accordion-collapse collapse" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <ul>
-                  <li><strong>Formularios </strong></li>
-                  <li>Videos </li>
-                  <li>Tables </li>
-                  <li><strong>Divs </strong></li>
-                  <li>Audios</li>
-                </ul>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headerid1">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bodyid1" aria-expanded="false" aria-controls="bodyid1">HTML</button>
+                </h2>
+                <div class="accordion-collapse collapse" aria-labelledby="headerid1" data-bs-parent="#accordionExample" id="bodyid1">
+                  <div class="accordion-body">
+                    <p>hola</p>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">CSS</button>
-            </h2>
-            <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <ul> 
-                  <li>Unidades </li>
-                  <li>Fuentes externas </li>
-                  <li>Z-index </li>
-                  <li>Overflow</li>
-                  <li><strong>Position </strong></li>
-                  <li><strong>Pseudo elementos</strong></li>
-                  <li>Colores</li>
-                  <li><strong>Display</strong></li>
-                  <li>Float</li>
-                  <li><strong>Flexbox</strong></li>
-                  <li><strong>Grid</strong></li>
-                  <li>Animation</li>
-                  <li>Transition</li>
-                  <li>Background</li>
-                  <li>Filtros</li>
-                  <li>Outline</li>
-                </ul>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headerid2">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bodyid2" aria-expanded="false" aria-controls="bodyid2">CSS</button>
+                </h2>
+                <div class="accordion-collapse collapse" aria-labelledby="headerid2" data-bs-parent="#accordionExample" id="bodyid2">
+                  <div class="accordion-body">
+                    <p>hola</p>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">JS</button>
-            </h2>
-            <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-              <div class="accordion-body"></div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingFour">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">SCSS</button>
-            </h2>
-            <div class="accordion-collapse collapse" id="collapseFour" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-              <div class="accordion-body"></div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingFive">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">PUG</button>
-            </h2>
-            <div class="accordion-collapse collapse" id="collapseFive" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-              <div class="accordion-body"></div>
-            </div>
-          </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headerid3">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bodyid3" aria-expanded="false" aria-controls="bodyid3">JS</button>
+                </h2>
+                <div class="accordion-collapse collapse" aria-labelledby="headerid3" data-bs-parent="#accordionExample" id="bodyid3">
+                  <div class="accordion-body">
+                    <p>hola</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headerid4">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bodyid4" aria-expanded="false" aria-controls="bodyid4">PUG</button>
+                </h2>
+                <div class="accordion-collapse collapse" aria-labelledby="headerid4" data-bs-parent="#accordionExample" id="bodyid4">
+                  <div class="accordion-body">
+                    <p>hola</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headerid5">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bodyid5" aria-expanded="false" aria-controls="bodyid5">SASS</button>
+                </h2>
+                <div class="accordion-collapse collapse" aria-labelledby="headerid5" data-bs-parent="#accordionExample" id="bodyid5">
+                  <div class="accordion-body">
+                    <p>hola</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headerid6">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bodyid6" aria-expanded="false" aria-controls="bodyid6">GIT</button>
+                </h2>
+                <div class="accordion-collapse collapse" aria-labelledby="headerid6" data-bs-parent="#accordionExample" id="bodyid6">
+                  <div class="accordion-body">
+                    <p>hola</p>
+                  </div>
+                </div>
+              </div>
         </div>
       </div>
       <div class="container pt-4" id="tarea">
-        <h4>Tarea</h4>
-        <h5>17 de mayo del 2021</h5>
+        <hr>
+        <h4 class="h2 text-center">Tarea</h4>
+        <h5>15 de mayo del 2021</h5>
         <h4>Tarea:</h4>
-        <ul>
-          <li><span class="fw-bold">Terminar: </span><a href="http://www.flexboxdefense.com/" target="_blank">Flex Defense</a></li>
-          <li><span class="fw-bold">Estudiar: </span>
+        <ul> 
+          <li>25 horas en la semana</li>
+          <li>Terminar de ver el curso de Javascript</li>
+          <li>Ver el curso de Git
             <ul>
-              <li><span class="fw-bold">HTML :</span>
-                <ul>
-                  <li>Etiqueta form</li>
-                  <li>Etiqueta table</li>
-                  <li>Etiqueta video</li>
-                  <li>Etiqueta audio</li>
-                  <li>Etiqueta div</li>
-                </ul>
-              </li>
-              <li><span class="fw-bold">Rutas relativas</span></li>
+              <li><strong>Página tiki </strong></li>
+              <ul>
+                <li>Flecha que desaparece cuando estás arriba </li>
+                <li>Hacer responsive</li>
+              </ul>
             </ul>
           </li>
-          <li><span class="fw-bold">Crear cuenta de Github</span></li>
         </ul>
-        <h4>Pendientes:</h4>
-        <ul>
-          <li>Cómo instalar preprocesadores</li>
-        </ul>
-        <!-- 17/5/21-->
+      </div>
+      <div class="container pt-4" id="historial">
+        <hr>
+        <h4 class="h2 text-center gray">Historial
+          <h5>8 de mayo del 2021</h5>
+          <h4>Tarea:</h4>
+          <ul> 
+            <li>5 horas de programación L-V </li>
+            <li>Diseño de la página de bolsas </li>
+            <li>Nuevas fotos añadirlas </li>
+            <li>Modificar la información </li>
+            <li>Modificar el contacto</li>
+          </ul>
+        </h4>
       </div>
       <hr>
-      <div id="historial">
-        <h4>Historial</h4>
-      </div>
       <p class="fs-4 pb-4">Este temario está en:<a class="btn btn-primary mx-2" href="https://github.com/AxelRSa/manuelTemary" target="_blank"><i class="fab fa-github fs-4"></i></a>    y está hecho con: <img class="mx-2" src="media/images/pug.svg" width="25"><i class="fab fa-sass mx-2"></i><i class="fab fa-bootstrap mx-2"></i><i class="fab fa-js mx-2"></i></p>
     </div>
     <script src="script.js"> </script>
